--- a/app/templates/bmc/css/pages/variables.scss
+++ b/app/templates/bmc/css/pages/variables.scss
@@ -1,7 +1,11 @@
+// !compileOnSave
+// compileOnSave: false
+//The above is to disable sass-autocompile plugin from compiling on save for Atom.io text editor
+
 //Color variables
 $green: #84bf41;
 $dark-blue: #222b37;
-// $dark-blue: #2E2D4D;
+$link-color: #6E9C39;
 $teal: #007991;
 $pink: #cb48b7;
 $med-blue: #5f5980;
