--- a/templates/bmc/css/pages/services.scss
+++ b/templates/bmc/css/pages/services.scss
@@ -31,7 +31,9 @@
     padding: 2.5em;
     align-self: center;
     .link {
-      @include buttons($white);
+      a {
+        @include btn-border-drawing($white, $orange, 2px, bottom, right);
+      }
     }
     @include respond-at(901px) {
       @include grid(2 / span 2, null);
@@ -90,8 +92,8 @@
       color: $white;
     }
     .link {
-      @include buttons($white);
       a {
+        @include btn-border-drawing($white, $dark-blue, 2px, bottom, right);
         display: block;
         @include respond-at(670px) {
           display: initial;
@@ -196,7 +198,9 @@
     text-align: center;
     margin: 0 auto;
     .link {
-      @include buttons($green);
+      a {
+        @include btn-border-drawing($link-color, $orange, 2px, bottom, right);
+      }
     }
   }
 }
